src/buildstructor/snapshots/builder_builder__builder_builder__codegen__tests__into_where_test.snap
---
source: src/buildstructor/codegen.rs
expression: output
---
impl Foo {
    fn builder<T>() -> __foo_builder::__FooBuilder<(__Required<T>,), T> {
        __foo_builder::new()
    }
}
use __foo_builder::*;
mod __foo_builder {
    use super::*;
    pub fn new<T>() -> __FooBuilder<(__Required<T>,), T> {
        __FooBuilder {
            fields: (__required(),),
            phantom: std::default::Default::default(),
        }
    }
    pub struct __Required<T> {
        phantom: std::marker::PhantomData<T>,
    }
    pub struct __Optional<T> {
        lazy: Option<T>,
    }
    pub struct __Set<T> {
        value: T,
    }
    fn __set<T>(value: T) -> __Set<T> {
        __Set { value }
    }
    fn __required<T>() -> __Required<T> {
        __Required::<T> {
            phantom: std::default::Default::default(),
        }
    }
    fn __optional<T>() -> __Optional<T> {
        __Optional::<T> { lazy: None }
    }
    impl<T: Default> From<__Optional<T>> for __Set<T> {
        fn from(o: __Optional<T>) -> Self {
            __Set {
                value: o.lazy.unwrap_or_default(),
            }
        }
    }
    pub struct __FooBuilder<__P, T> {
        fields: __P,
        phantom: (std::marker::PhantomData<T>,),
    }
    impl<T> __FooBuilder<(__Required<T>,), T> {
        pub fn simple(self, simple: T) -> __FooBuilder<(__Set<T>,), T> {
            __FooBuilder {
                fields: (__set(simple),),
                phantom: std::default::Default::default(),
            }
        }
    }
    impl<T, __P0: Into<__Set<T>>> __FooBuilder<(__P0,), T>
    where
        T: Into<String>,
    {
        pub fn build(self) -> Foo {
            Foo::new(self.fields.0.into().value)
        }
    }
}

